--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :name %>
   <%= f.submit "Submit"%>
 <% end %>
-<p><%= link_to "Back to list", lists_path %></p>
+<p><%= link_to "Back to list", root_path %></p>
 </div>
