--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,4 +3,4 @@
 <%@list.bookmarks.each do |bookmark|%>
 <li><%= bookmark.comment %></li>
 <%end%>
-<p><%= link_to "Back to list", lists_path %></p>
+<p><%= link_to "Back to list", root_path %></p>
