--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
 <% @bookmarks.each do |bookmark| %>
-<li><%= link_to bookmark.name, list_path(list) %></li>
+<li><%= link_to bookmark.name, root_path(list) %></li>
 <li><%= link_to "New", new_list_path %></li>
 <%end%>
 </ul>
