--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
 <% @lists.each do |list| %>
-<li><%= link_to list.name, list_path(list) %></li>
+<li><%= link_to list.name, root_path(list) %></li>
 
 <%end%>
 <li><%= link_to "New", new_list_path %></li>
