--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @list.name%></h1>
+<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
 <%= link_to "add bookmark", new_list_bookmark_path(@list) %>
 <%@list.bookmarks.each do |bookmark|%>
 <li><%= bookmark.comment %></li>
